--- a/debian/control
+++ b/debian/control
@@ -91,6 +91,17 @@ Description: GStreamer plugins from QtGStreamer
  Currently, this package contains the qwidgetvideosink element, a video sink
  that draws directly on QWidgets using the QPainter API.
 
+Package: qtgstreamer-declarative
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Description: QML plugins from QtGStreamer
+ This package contains QML plugins that are shipped together with the
+ QtGStreamer bindings library. These plugins provide QML elements that
+ enable better integration of GStreamer in QML-based GUI applications.
+
 Package: libqtgstreamer-dev
 Section: libdevel
 Architecture: any
