--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Maintainers of GStreamer packages <pkg-gstreamer-maintainers@lists.alioth.debian.org>
 Uploaders: George Kiagiadakis <kiagiadakis.george@gmail.com>
 Build-Depends: debhelper (>= 9),
+               dpkg-dev (>= 1.16.1~),
                cmake (>= 2.8.6),
                libqt4-dev (>= 4:4.7),
                libboost-dev (>= 1.39),
