--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: qt-gstreamer
 Section: libs
 Priority: optional
 Maintainer: Maintainers of GStreamer packages <pkg-gstreamer-maintainers@lists.alioth.debian.org>
-Uploaders: George Kiagiadakis <kiagiadakis.george@gmail.com>
+Uploaders: George Kiagiadakis <kiagiadakis.george@gmail.com>,
+           Diane Trout <diane@ghic.org>
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1~),
                cmake (>= 2.8.6),
