--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,8 @@ Build-Depends: debhelper (>= 9),
                graphviz
 Standards-Version: 3.9.5
 Homepage: http://gstreamer.freedesktop.org
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/qt-gstreamer.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/qt-gstreamer.git
 
 Package: libqtglib-2.0-0
 Architecture: any
