--- a/debian/rules
+++ b/debian/rules
@@ -16,6 +16,7 @@ override_dh_auto_build:
 override_dh_auto_install:
 	dh_auto_install --parallel
 	cp -r obj-$(DEB_HOST_GNU_TYPE)/doc debian/tmp/doc
+	find debian/tmp/doc/html -name '*.md5' -exec rm {} \;
 	-rm debian/tmp/doc/html/jquery.js
 
 override_dh_gencontrol:
