--- a/debian/rules
+++ b/debian/rules
@@ -2,22 +2,34 @@
 
 include /usr/share/dpkg/architecture.mk
 
+BUILD_QT5 := $(DEB_HOST_GNU_TYPE)-qt5
+CMAKE_OPTS :=  -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+               -DQTGSTREAMER_STATIC=OFF \
+               -DQTGSTREAMER_TESTS=OFF \
+               -DQTGSTREAMER_EXAMPLES=OFF \
+               -DGST_PACKAGE_NAME="QtGStreamer (Debian)" \
+               -DGST_PACKAGE_ORIGIN="http://packages.qa.debian.org/qt-gstreamer" \
+               -DUSE_QT_PLUGIN_DIR=OFF
+
 override_dh_auto_configure:
-	dh_auto_configure -- -DQTGSTREAMER_STATIC=OFF \
-	                     -DQTGSTREAMER_TESTS=OFF \
-	                     -DQTGSTREAMER_EXAMPLES=OFF \
-	                     -DGST_PACKAGE_NAME="QtGStreamer (Debian)" \
-	                     -DGST_PACKAGE_ORIGIN="http://packages.qa.debian.org/qt-gstreamer" \
-	                     -DUSE_QT_PLUGIN_DIR=OFF
+	dh_auto_configure -- $(CMAKE_OPTS)
+	dh_auto_configure --builddirectory=$(BUILD_QT5) -- \
+                          -DQT_VERSION=5 $(CMAKE_OPTS)
 
 override_dh_auto_build:
 	dh_auto_build --parallel -- all doc
+	dh_auto_build --parallel --builddirectory=$(BUILD_QT5) -- all
 
 override_dh_auto_install:
 	dh_auto_install --parallel
+	dh_auto_install --parallel --builddirectory=$(BUILD_QT5)
 	cp -r obj-$(DEB_HOST_GNU_TYPE)/doc debian/tmp/doc
 	find debian/tmp/doc/html -name '*.md5' -exec rm {} \;
 	-rm debian/tmp/doc/html/jquery.js
+
+override_dh_auto_clean:
+	dh_auto_clean
+	rm -rf $(BUILD_QT5)
 
 override_dh_gencontrol:
 	mkdir -p debian/fake-home
