--- a/debian/control
+++ b/debian/control
@@ -4,17 +4,20 @@ Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: George Kiagiadakis <kiagiadakis.george@gmail.com>,
            Diane Trout <diane@ghic.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: cmake (>= 2.8.6),
+               debhelper (>= 9),
+               doxygen,
                dpkg-dev (>= 1.16.1~),
-               pkg-kde-tools (>= 0.12),
-               cmake (>= 2.8.6),
+               graphviz,
+               libboost-dev (>= 1.39),
+               libgstreamer-plugins-base1.0-dev (>= 1.1.90),
+               libgstreamer1.0-dev (>= 1.1.90),
                libqt4-dev (>= 4:4.8.1),
                libqt4-opengl-dev (>= 4:4.8.1),
-               libboost-dev (>= 1.39),
-               libgstreamer1.0-dev (>= 1.1.90),
-               libgstreamer-plugins-base1.0-dev (>= 1.1.90),
-               doxygen,
-               graphviz
+               libqt5opengl5-dev,
+               pkg-kde-tools (>= 0.12),
+               qtbase5-dev,
+               qtdeclarative5-dev
 Standards-Version: 3.9.6
 Homepage: http://gstreamer.freedesktop.org
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/qt-gstreamer.git
@@ -24,9 +27,7 @@ Package: libqtglib-2.0-0
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         libstdc++6 (>= 4.5.0~)
+Depends: libstdc++6 (>= 4.5.0~), ${misc:Depends}, ${shlibs:Depends}
 Description: C++ bindings library for GLib and GObject with a Qt-style API
  This package contains the QtGLib library, a library that provides
  C++ bindings for parts of the GLib and GObject APIs with a Qt-syle API.
@@ -42,8 +43,7 @@ Package: libqtgstreamer-1.0-0
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: C++ bindings library for GStreamer with a Qt-style API
  This package contains the QtGStreamer library, a library that provides
  C++ bindings for GStreamer with a Qt-style API. The bindings are designed
@@ -55,8 +55,7 @@ Package: libqtgstreamerui-1.0-0
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: qtgstreamer-plugins
 Description: QtGStreamerUi library
  This package contains the QtGStreamerUi library, a library that provides
@@ -68,8 +67,7 @@ Package: libqtgstreamerutils-1.0-0
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: QtGStreamerUtils library
  This package contains the QtGStreamerUtils library, a library that provides
  some high level utility classes that can be used with QtGStreamer.
@@ -80,8 +78,7 @@ Package: qtgstreamer-plugins
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 XB-GStreamer-Version: ${gstreamer:Version}
 XB-GStreamer-Elements: ${gstreamer:Elements}
 XB-GStreamer-URI-Sources: ${gstreamer:URISources}
@@ -101,8 +98,7 @@ Package: qtgstreamer-declarative
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: QML plugins from QtGStreamer
  This package contains QML plugins that are shipped together with the
  QtGStreamer bindings library. These plugins provide QML elements that
@@ -111,13 +107,13 @@ Description: QML plugins from QtGStreamer
 Package: libqtgstreamer-dev
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends},
+Depends: libboost-dev (>= 1.39),
+         libqt4-dev (>= 4:4.8.1),
          libqtglib-2.0-0 (= ${binary:Version}),
          libqtgstreamer-1.0-0 (= ${binary:Version}),
          libqtgstreamerui-1.0-0 (= ${binary:Version}),
          libqtgstreamerutils-1.0-0 (= ${binary:Version}),
-         libqt4-dev (>= 4:4.8.1),
-         libboost-dev (>= 1.39)
+         ${misc:Depends}
 Suggests: qtgstreamer-doc
 Description: Development headers for QtGStreamer
  QtGStreamer provides C++ bindings for GStreamer with a Qt-style API,
@@ -129,7 +125,7 @@ Description: Development headers for QtGStreamer
 Package: qtgstreamer-doc
 Section: doc
 Architecture: all
-Depends: ${misc:Depends}, libjs-jquery
+Depends: libjs-jquery, ${misc:Depends}
 Suggests: libqtgstreamer-dev
 Description: QtGStreamer API documentation
  QtGStreamer provides C++ bindings for GStreamer with a Qt-style API,
@@ -143,12 +139,12 @@ Section: debug
 Priority: extra
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends},
-         libqtglib-2.0-0 (= ${binary:Version}),
+Depends: libqtglib-2.0-0 (= ${binary:Version}),
          libqtgstreamer-1.0-0 (= ${binary:Version}),
          libqtgstreamerui-1.0-0 (= ${binary:Version}),
          libqtgstreamerutils-1.0-0 (= ${binary:Version}),
-         qtgstreamer-plugins (= ${binary:Version})
+         qtgstreamer-plugins (= ${binary:Version}),
+         ${misc:Depends}
 Description: Debug symbols for QtGStreamer
  QtGStreamer provides C++ bindings for GStreamer with a Qt-style API,
  plus some helper classes for integrating GStreamer better in Qt applications.
