update maintainer to make ubuntu packaging tools happy

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: qt-gstreamer
 Section: libs
 Priority: optional
-Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
+Maintainer: Debian/Kubuntu KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: George Kiagiadakis <kiagiadakis.george@gmail.com>,
            Diane Trout <diane@ghic.org>
 Build-Depends: cmake (>= 2.8.6),
