Differentiate package long descriptions between Qt4 and Qt5 packages.

--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Description: C++ bindings library for GLib and GObject with a Qt-style API
  .
  This library serves as a base for building the QtGStreamer bindings library.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: libqtgstreamer-1.0-0
 Architecture: any
@@ -50,6 +50,8 @@ Description: C++ bindings library for GStreamer with a Qt-style API
  to be easy to use for C++ programmers that are used to the Qt API and
  also provide easier integration with Qt by using Qt's data types where
  applicable.
+ .
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: libqtgstreamerui-1.0-0
 Architecture: any
@@ -61,7 +63,7 @@ Description: QtGStreamerUi library
  This package contains the QtGStreamerUi library, a library that provides
  helper classes for integrating GStreamer better in graphical Qt applications.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: libqtgstreamerutils-1.0-0
 Architecture: any
@@ -72,7 +74,7 @@ Description: QtGStreamerUtils library
  This package contains the QtGStreamerUtils library, a library that provides
  some high level utility classes that can be used with QtGStreamer.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: qtgstreamer-plugins
 Architecture: any
@@ -93,6 +95,8 @@ Description: GStreamer plugins from QtGStreamer
  .
  Currently, this package contains the qtvideosink, qtglvideosink and
  qwidgetvideosink elements.
+ .
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: qtgstreamer-declarative
 Architecture: any
@@ -103,6 +107,8 @@ Description: QML plugins from QtGStreamer
  This package contains QML plugins that are shipped together with the
  QtGStreamer bindings library. These plugins provide QML elements that
  enable better integration of GStreamer in QML-based GUI applications.
+ .
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: libqtgstreamer-dev
 Section: libdevel
@@ -121,6 +127,8 @@ Description: Development headers for QtGStreamer
  .
  This package provides the necessary development files for building
  C++/Qt applications that use the QtGStreamer library.
+ .
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: qtgstreamer-doc
 Section: doc
@@ -151,6 +159,8 @@ Description: Debug symbols for QtGStreamer
  .
  This package contains the debug symbols for the various binaries shipped
  with QtGStreamer.
+ .
+ This package is part of the Qt4 version of QtGStreamer.
 
 Package: libqt5glib-2.0-0
 Architecture: any
@@ -166,7 +176,7 @@ Description: C++ bindings library for GLib and GObject with a Qt-style API - Qt 
  .
  This library serves as a base for building the QtGStreamer bindings library.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: libqt5gstreamer-1.0-0
 Architecture: any
@@ -179,6 +189,8 @@ Description: C++ bindings library for GStreamer with a Qt-style API - Qt 5 build
  to be easy to use for C++ programmers that are used to the Qt API and
  also provide easier integration with Qt by using Qt's data types where
  applicable.
+ .
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: libqt5gstreamerui-1.0-0
 Architecture: any
@@ -190,7 +202,7 @@ Description: QtGStreamerUi library - Qt 5 build
  This package contains the QtGStreamerUi library, a library that provides
  helper classes for integrating GStreamer better in graphical Qt applications.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: libqt5gstreamerutils-1.0-0
 Architecture: any
@@ -201,7 +213,7 @@ Description: QtGStreamerUtils library - Qt 5 build
  This package contains the QtGStreamerUtils library, a library that provides
  some high level utility classes that can be used with QtGStreamer.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: libqt5gstreamerquick-1.0-0
 Architecture: any
@@ -213,7 +225,7 @@ Description: QtGStreamerQuick library - Qt 5 build
  This package contains the QtGStreamerQuick library, a library that provides
  some high level utility classes that can be used with QtGStreamer.
  .
- This package is part of QtGStreamer.
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: qtgstreamer-plugins-qt5
 Architecture: any
@@ -234,6 +246,8 @@ Description: GStreamer plugins from QtGStreamer - Qt 5 build
  .
  Currently, this package contains the qtvideosink, qtglvideosink and
  qwidgetvideosink elements.
+ .
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: libqt5gstreamer-dev
 Section: libdevel
@@ -253,6 +267,8 @@ Description: Development headers for QtGStreamer - Qt 5 build
  .
  This package provides the necessary development files for building
  C++/Qt applications that use the QtGStreamer library.
+ .
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: qml-module-qtgstreamer
 Architecture: any
@@ -263,6 +279,8 @@ Description: QML plugins from QtGStreamer - Qt 5 build
  This package contains QML plugins that are shipped together with the
  QtGStreamer bindings library. These plugins provide QML elements that
  enable better integration of GStreamer in QML-based GUI applications.
+ .
+ This package is part of the Qt5 version of QtGStreamer.
 
 Package: qt5gstreamer-dbg
 Section: debug
@@ -281,3 +299,5 @@ Description: Debug symbols for QtGStreamer - Qt 5 build
  .
  This package contains the debug symbols for the various binaries shipped
  with QtGStreamer.
+ .
+ This package is part of the Qt5 version of QtGStreamer.
