--- a/debian/rules
+++ b/debian/rules
@@ -16,9 +16,12 @@ override_dh_auto_configure:
 	dh_auto_configure --builddirectory=$(BUILD_QT5) -- \
                           -DQT_VERSION=5 $(CMAKE_OPTS)
 
-override_dh_auto_build:
+override_dh_auto_build-arch:
 	dh_auto_build --parallel -- all doc
 	dh_auto_build --parallel --builddirectory=$(BUILD_QT5) -- all
+
+override_dh_auto_build-indep:
+	dh_auto_build --parallel --builddirectory=$(BUILD_QT5) -- doc
 
 override_dh_auto_install:
 	dh_auto_install --parallel
