--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Build-Depends: cmake (>= 2.8.6),
 Standards-Version: 3.9.6
 Homepage: http://gstreamer.freedesktop.org
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/qt-gstreamer.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/qt-gstreamer.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-extras/qt-gstreamer.git
 
 Package: libqtglib-2.0-0
 Architecture: any
